# tractodata

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_helpers.py  tox.ini
.github/workflows/: check_format.yml  manage_pr.yml  test_package.yml
requirements/: requirements.txt  requirements_dev.txt
tractodata/: info.py
tractodata/data/: __init__.py
tractodata/data/tests/: test_data.py
tractodata/io/: fetcher.py  utils.py
tractodata/io/tests/: test_fetcher.py  test_utils.py
