[build-system]
requires = [
    "setuptools >= 45",
    "wheel",
    "setuptools_scm >= 6.2",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = ["py36"]
exclude ='''
(
  /(
      \.eggs        # exclude a few common directories in the
    | \.git         # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | data            # also separately exclude project-specific files
                    # and folders in the root of the project
)
'''

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["tractodata"]

[tool.setuptools_scm]
write_to = "tractodata/_version.py"
