[metadata]
author = Jon Haitz Legarreta
author_email = jon.haitz.legarreta@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Medical Science Apps.
description = Tractography data repository to be used for tractography research
download_url = https://github.com/jhlegarreta/tractodata
keywords = DWI neuroimaging, tractography
long_description = file: README.md
maintainer = Jon Haitz Legarreta
maintainer_email = jon.haitz.legarreta@gmail.com
name = tractodata

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires  =
    dipy
    nibabel
    numpy
    pandas
    trimeshpy == 0.0.2

[options.extras_require]
testing =
    black == 21.5b1
    flake8 == 3.9.2
    flake8-docstrings == 1.6.0
    hypothesis >= 6.8.0
    isort == 5.8.0
    pre-commit >= 2.9.0
    pytest == 5.3.*
    pytest-cov
    pytest-pep8
    pytest-xdist

[flake8]
max-line-length = 79
doctests = True
docstring-convention = numpy
exclude = .tox,*.egg,build,temp
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
ignore =
    # D100,  # D100 - missing docstring in public module
    # D104,  # D104 - missing docstring in public package
    # D107,  # D107 - missing docstring in __init__
    D,     # Ignore all docstrings
    E203,  # E203 - whitespace before ':'. Opposite convention enforced by black
    E231,  # E231 - missing whitespace after ',', ';', or ':'; for black
    E501,  # E501 - line too long. Handled by black, we have longer lines
    W503   # W503 - line break before binary operator, need for black
extend-ignore =
    D103   ./* # D103 - missing docstring in public function
extend-select =
    D404  # D404 - first word of the docstring should not be `This`
